ci: Added JVM arg to allow agent loading (for tests)